--- a/spotify-api-integration/Dockerfile
+++ b/spotify-api-integration/Dockerfile
@@ -1,8 +1,14 @@
+# ---------- Build stage ----------
 FROM maven:3.8.3-openjdk-11 AS build
-COPY . .
+WORKDIR /app
+COPY pom.xml ./
+RUN mvn dependency:go-offline
+COPY src ./src
 RUN mvn clean package -DskipTests
 
+# ---------- Runtime stage ----------
 FROM openjdk:11.0.11-jdk-slim
-COPY --from=build /spotify-api-integration/target/spotify-api-integration-0.0.1-SNAPSHOT.jar spotify-api-integration.jar
+WORKDIR /app
+COPY --from=build /app/target/spotify-api-integration-0.0.1-SNAPSHOT.jar app.jar
 EXPOSE 8080
-ENTRYPOINT ["java","-jar","spotify-api-integration.jar"]
+ENTRYPOINT ["java", "-jar", "app.jar"]
