--- a/spotify-api-integration/Dockerfile
+++ b/spotify-api-integration/Dockerfile
@@ -1,7 +1,7 @@
 FROM maven:3.8.3-openjdk-11 AS build
 WORKDIR spotify-api-integration
 COPY . spotify-api-integration
-RUN mvn clean package -DskipTests
+RUN mvn -f spotify-api-integration/pom.xml clean package -DskipTests
 
 FROM openjdk:11.0.11-jdk-slim
 WORKDIR spotify-api-integration
