--- a/spotify-api-integration/Dockerfile
+++ b/spotify-api-integration/Dockerfile
@@ -1,6 +1,6 @@
 FROM maven:3.8.3-openjdk-11 AS build
 WORKDIR spotify-api-integration
-COPY . spotify-api-integration
+COPY . .
 RUN mvn -f spotify-api-integration/pom.xml clean package -DskipTests
 
 FROM openjdk:11.0.11-jdk-slim
