--- a/spotify-api-integration/Dockerfile
+++ b/spotify-api-integration/Dockerfile
@@ -1,16 +1,13 @@
-FROM maven:3.8.3-openjdk-11 AS build
+FROM maven:3.8.3-openjdk-11
+
 WORKDIR /app
 
-COPY pom.xml .
-COPY src ./src
-
-RUN mvn clean package -DskipTests
-
-FROM openjdk:11.0.11-jdk-slim
-WORKDIR /app
-
-COPY --from=build /app/target/spotify-api-integration-0.0.1-SNAPSHOT.jar app.jar
+COPY target/spotify-api-integration-0.0.1-SNAPSHOT.jar /app/app.jar
 
 EXPOSE 8080
-ENTRYPOINT ["java", "-jar", "app.jar"]
+
+ENTRYPOINT ["java", "-jar", "/app/app.jar"]
+
+
+
 
