--- a/spotify-api-integration/Dockerfile
+++ b/spotify-api-integration/Dockerfile
@@ -2,11 +2,13 @@ FROM maven:3.8.3-openjdk-11
 
 WORKDIR /app
 
-COPY target/spotify-api-integration-0.0.1-SNAPSHOT.jar /app/app.jar
-
-EXPOSE 8080
-
-ENTRYPOINT ["java", "-jar", "/app/app.jar"]
+COPY .mvn/ .mvn
+COPY mvnw pom.xml ./
+RUN ./mvnw dependency:go-offline
+ 
+COPY src ./src
+ 
+CMD ["./mvnw", "spring-boot:run"]
 
 
 
