--- a/spotify-api-integration/Dockerfile
+++ b/spotify-api-integration/Dockerfile
@@ -1,14 +1,8 @@
 FROM maven:3.8.3-openjdk-11
-
 WORKDIR /app
-
-COPY .mvn/ .mvn
-COPY mvnw pom.xml ./
-RUN ./mvnw dependency:go-offline
- 
-COPY src ./src
- 
-CMD ["./mvnw", "spring-boot:run"]
+COPY ./target/spotify-api-integration-0.0.1-SNAPSHOT.jar /app
+EXPOSE 8080
+CMD ["java", "-jar", "spotify-api-integration-0.0.1-SNAPSHOT.jar"]
 
 
 
