--- a/spotify-api-integration/Dockerfile
+++ b/spotify-api-integration/Dockerfile
@@ -1,9 +1,9 @@
-FROM maven:3.8.3-openjdk-11
+FROM openjdk:11.0.11-jdk-slim
+
 WORKDIR /app
-COPY ./target/spotify-api-integration-0.0.1-SNAPSHOT.jar /app
+
+COPY target/spotify-api-integration-0.0.1-SNAPSHOT.jar /app/spotify-api-integration.jar
+
 EXPOSE 8080
-CMD ["java", "-jar", "spotify-api-integration-0.0.1-SNAPSHOT.jar"]
 
-
-
-
+ENTRYPOINT ["java","-jar","spotify-api-integration.jar"]
