--- a/spotify-api-integration/Dockerfile
+++ b/spotify-api-integration/Dockerfile
@@ -1,9 +1,13 @@
-FROM openjdk:11.0.11-jdk-slim
-
+# Stage 1: Build the project
+FROM maven:3.8.3-openjdk-11 AS build
 WORKDIR /app
+COPY pom.xml .
+COPY src ./src
+RUN mvn clean package -DskipTests
 
-COPY target/spotify-api-integration-0.0.1-SNAPSHOT.jar /app/spotify-api-integration.jar
+# Stage 2: Run the app
+FROM openjdk:11.0.11-jdk-slim
+WORKDIR /app
+COPY --from=build /app/target/*.jar app.jar
+ENTRYPOINT ["java", "-jar", "app.jar"]
 
-EXPOSE 8080
-
-ENTRYPOINT ["java","-jar","spotify-api-integration.jar"]
