--- a/spotify-api-integration/Dockerfile
+++ b/spotify-api-integration/Dockerfile
@@ -1,8 +1,8 @@
 # Stage 1: Build the project
 FROM maven:3.8.3-openjdk-11 AS build
 WORKDIR /app
-COPY pom.xml .
-COPY src ./src
+COPY spotify-api-integration/pom.xml .
+COPY spotify-api-integration/src ./src
 RUN mvn clean package -DskipTests
 
 # Stage 2: Run the app
